--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true,
-    "stepDefinitions": "cypress/e2e/user stories/"
+    "stepDefinitions": "cypress/cucumber-bdd"
   }
 }
