--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true,
     "stepDefinitions": "cypress/cucumber-bdd"
+  },
+  "dependencies": {
+    "cucumber-html-reporter": "^7.2.0"
   }
 }
